updated padding on contact page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1515,7 +1515,7 @@ a {
 
 .contact-page-section {
   background-color: var(--white);
-  padding: 1.5rem;
+  padding: 6rem 1.5rem;
   font-family: 'Inter Tight', sans-serif;
   color: var(--black);
 }
