--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -95,7 +95,7 @@ a {
   align-items: center;
   gap: 3rem;
   font-family: 'Antonio', sans-serif;
-  font-size: 1.5rem;
+  font-size: clamp(1.25rem, calc(4.2vw), 1.5rem);
   text-transform: uppercase;
   letter-spacing: -0.5px;
   transition: all 0.2s ease-in-out;
@@ -243,7 +243,7 @@ a {
 
 /* About Page */
 
-.about-section {
+.about-full-section {
   background: url('/bg-services-grid.png') center center no-repeat;
   background-size: cover;
   background-position: top;
@@ -511,28 +511,31 @@ a {
   letter-spacing: -0.3px;
 }
 
-/* Hero Portfolio - Project List */
-
-.project-hero-list {
-  display: grid;
-  gap: clamp(1.5rem, 2.5vw, 2.5rem);
-}
-
 /* Hero - Project Cards */
 
 .portfolio-hero-card {
   display: grid;
-  grid-template-columns: minmax(0, 1fr) minmax(0, 1.5fr);
   gap: clamp(1rem, 2vw, 1.5rem);
   border-bottom: 2px solid var(--gray);
   padding: 2rem 0;
   align-items: stretch;
 }
 
+.portfolio-hero-card-content {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: clamp(1.5rem, 2.5vw, 2.5rem);
+}
+
 @media (max-width: 820px) {
   .portfolio-hero-card {
     grid-template-columns: 1fr;
   }
+
+  .portfolio-hero-card-content {
+  display: flex;
+  flex-direction: column;
+}
 }
 
 /* Project Hero - Image */
@@ -543,7 +546,7 @@ a {
 
 .hero-project-image-wrapper {
   position: relative;
-  max-height: 70vh;
+  max-height: 50vh;
   overflow: auto;
   overscroll-behavior: contain;
   scroll-snap-type: y mandatory;
@@ -563,9 +566,11 @@ a {
 
 /* Media Query for project image */
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 800px) {
   .hero-project-image-wrapper {
-
+    position: relative;
+    max-height: 45vh;
+    overflow: auto;
   }
 }
 
@@ -686,7 +691,6 @@ a {
   background: var(--black);
   color: var(--white);
 }
-
 
 /* Hero - Services Section */
 
