--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1619,5 +1619,36 @@ a {
 
 .caseStudy-full-intro {
   max-width: 40ch;
-  color: var(--black);
+  color: var(--blue-gray);
+  text-transform: uppercase;
+}
+
+/* Case Study Content */
+
+.caseStudy-block {
+  max-width: 1200px;
+  margin: 4rem auto 0;
+  padding-top: 2.5rem;
+  border-top: 1px solid var(--blue-gray);
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  gap: 1.25rem 2rem;
+}
+
+@media only screen and (max-width: 600px) {
+  .caseStudy-block {
+  grid-template-columns: 1fr;
+}
+}
+
+.caseStudy-content {
+  padding: 2rem 0;
+}
+
+.caseStudy-block h2 {
+  color: var(--blue);
+}
+
+.caseStudy-block h3 {
+  color: var(--blue-gray);
 }
